--- a/style.css
+++ b/style.css
@@ -1,13 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-weight: bold;
+  font-family: Roboto;
+}
+
+:root {
+  --blue-color: #1166dd;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+p,
+span,
+a {
+  font-size: 1rem;
 }
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 html {
@@ -18,8 +45,8 @@ body {
 }
 
 .svg {
-    height: 5vh;
-  }
+  height: 4vh;
+}
 
 .topbar {
   height: 15vh;
@@ -38,33 +65,92 @@ body {
 }
 
 .searchbar {
-  height: 40%;
   width: 35%;
+  height: 40%;
+  display: grid;
+  grid-template-columns: 1fr 8%;
+  grid-auto-rows: 1fr;
 }
 
-.account{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+.searchbar > input {
+  grid-column: 1/2;
+  border-radius: 0.5vh;
+  border-right: none;
+  border: 0.3vh solid var(--blue-color);
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
-#account-svg{
-    grid-column: 1/2;
-    grid-row: 1 / 4;
+.searchbar > button {
+  grid-column: 2/4;
+  background-color: var(--blue-color);
+  box-shadow: none;
+  border: 0.3vh solid var(--blue-color);
+  border-radius: 0.5vh;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
-#accorders{
-    grid-column: 2/4;
-    grid-row: 2;
+
+.account {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
+#account-svg {
+  grid-column: 1/2;
+  grid-row: 1 / 4;
+  justify-self: end;
+  padding-right: 1.5vh;
+}
+
+#login > a {
+  font-weight: normal;
+}
+
+#accorders {
+  grid-column: 2/4;
+  grid-row: 2;
+}
+
+#shoppingcart-svg {
+  grid-column: 3/5;
+  grid-row: 1/4;
+  justify-self: center;
+}
 
 .bottombar > ul {
-  padding-top: 2vh;
+  background-color: var(--blue-color);
+  padding-right: 15vh;
+  padding-left: 15vh;
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
-  height: 100%;
   justify-content: space-around;
+  color: white;
+}
+
+.main-menu{
+  padding-right: 22vh;
+  padding-left: 22vh;
+  height: 50vh;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr 30%;
+  justify-content: center;
+  gap: 1.5vh;
+}
+
+.advert{
+  grid-column: 2/6;
+  grid-row: 0;
+}
+
+.advert > img{
+  width: 100%;
+  height: 100%;
 }
