--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
   padding: 0;
   font-weight: bold;
   font-family: Roboto;
+  
 }
 
 :root {
   --blue-color: #1166dd;
+  --gray-color: #f1f1f1;
 }
 
 h1 {
@@ -137,7 +139,7 @@ body {
 .main-menu{
   padding-right: 22vh;
   padding-left: 22vh;
-  height: 50vh;
+  height: 65vh;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 1fr 30%;
@@ -145,9 +147,34 @@ body {
   gap: 1.5vh;
 }
 
+.products{
+  grid-row: 1/3;
+  grid-column: 1;
+  height: 100%;
+  background-color: var(--gray-color);
+}
+
+.products > nav{
+  height: 100%;
+}
+
+.products > nav > ul{
+  display: grid;
+  grid-template-rows: repeat(16, 1fr); 
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 100%;
+}
+.products > nav > ul > :last-child{
+  padding-top: 2vh;
+  color: var(--blue-color);
+}
+
 .advert{
   grid-column: 2/6;
   grid-row: 0;
+  overflow: hidden;
 }
 
 .advert > img{
