--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
   padding: 0;
   font-weight: bold;
   font-family: Roboto;
-  
 }
 
 :root {
@@ -93,7 +92,6 @@ body {
   border-bottom-left-radius: 0;
 }
 
-
 .account {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -136,7 +134,7 @@ body {
   color: white;
 }
 
-.main-menu{
+.main-menu {
   padding-right: 22vh;
   padding-left: 22vh;
   height: 65vh;
@@ -147,37 +145,75 @@ body {
   gap: 1.5vh;
 }
 
-.products{
+.products {
   grid-row: 1/3;
   grid-column: 1;
   height: 100%;
   background-color: var(--gray-color);
 }
 
-.products > nav{
+.products > nav {
   height: 100%;
 }
 
-.products > nav > ul{
-  display: grid;
-  grid-template-rows: repeat(16, 1fr); 
+.products > nav > ul {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
 }
-.products > nav > ul > :last-child{
+.products > nav > ul > :last-child {
   padding-top: 2vh;
   color: var(--blue-color);
 }
 
-.advert{
+.advert {
   grid-column: 2/6;
   grid-row: 0;
   overflow: hidden;
 }
 
-.advert > img{
+.advert > a > img {
   width: 100%;
   height: 100%;
+}
+
+.bom,
+.rfq,
+.certificate,
+.stock {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  text-align: left;
+  justify-items: center;
+  align-items: center;
+  border: 0.3vh solid var(--gray-color);
+  padding: 2vh;
+}
+
+.bom > img,
+.rfq > img,
+.certificate > img,
+.stock > img {
+  width: 50%;
+}
+
+.bom {
+  grid-column: 2/3;
+}
+
+.rfq {
+  grid-column: 3/4;
+}
+
+.rfq > span{
+  justify-self: left;
+}
+
+.certificate {
+  grid-column: 4/5;
+}
+.stock {
+  grid-column: 5/6;
 }
