--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 #account-svg {
-  grid-column: 1/2;
+  grid-column: 1 / 2;
   grid-row: 1 / 4;
   justify-self: end;
   padding-right: 1.5vh;
@@ -125,6 +125,10 @@ body {
   justify-self: center;
 }
 
+#burger-menu {
+  display: none;
+}
+
 .bottombar > ul {
   background-color: var(--blue-color);
   padding-right: 15vh;
@@ -137,6 +141,9 @@ body {
   flex-grow: 1;
   justify-content: space-around;
   color: white;
+}
+#burger-menu2 {
+  display: none;
 }
 
 .main-menu {
@@ -201,7 +208,7 @@ body {
 .rfq > img,
 .certificate > img,
 .stock > img {
-  width: 50%;
+  width: 7vh;
 }
 
 .bom {
@@ -265,7 +272,7 @@ body {
   padding-bottom: 1vh;
 }
 
-footer{
+footer {
   background-color: var(--blue-color);
   display: grid;
   color: white;
@@ -277,14 +284,164 @@ footer{
   height: 20vh;
 }
 
-footer > *{
+footer > * {
   align-content: center;
   justify-content: center;
   text-align: center;
   grid-row: 2;
 }
 
-footer > h1{
+footer > h1 {
   grid-row: 1;
   grid-column: 2/5;
+}
+
+@media screen and (max-width: 1293px) {
+  .topbar {
+    padding-top: 1vh;
+  }
+  .logo {
+    height: 40%;
+  }
+  #login {
+    display: none;
+  }
+  #accorders {
+    display: none;
+  }
+  #account-svg {
+    padding-right: 1vh;
+  }
+  .bottombar > ul {
+    padding-left: 3vh;
+    padding-right: 3vh;
+  }
+  .bottombar > ul > * {
+    padding-left: 2vh;
+    padding-right: 2vh;
+  }
+  .main-menu {
+    padding-left: 3vh;
+    padding-right: 3vh;
+  }
+  .products {
+    display: none;
+  }
+  .advert {
+    grid-column: 1/6;
+    grid-row: 1/3;
+    padding-left: 10vw;
+    padding-right: 10vw;
+  }
+  .main-menu {
+    height: 45vh;
+  }
+  .bom,
+  .rfq,
+  .certificate,
+  .stock {
+    display: none;
+  }
+  footer {
+    height: 15vh;
+  }
+  footer > * {
+    display: none;
+  }
+  footer > h1 {
+    display: grid;
+    grid-row: 1/3;
+    font-size: 1.5rem;
+  }
+  .popular-products-list {
+    padding-top: 2vh;
+    margin-right: 10vw;
+    margin-left: 10vw;
+  }
+  .products-title {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1070px) {
+  .main-menu {
+    height: 35vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+
+  .popular-products-list {
+    margin-right: 1vw;
+    margin-left: 1vw;
+  }
+  .advert {
+    grid-column: 1/6;
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+  #shoppingcart-svg {
+    display: none;
+  }
+  #account-svg {
+    display: none;
+  }
+
+  .topbar {
+    flex-direction: column;
+    height: 20vh;
+  }
+  .searchbar {
+    padding-left: 10vw;
+    padding-right: 10vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    width: 100%;
+    padding-top: 2vh;
+  }
+  .logo {
+    height: 100%;
+  }
+  #burger-menu {
+    display: flex;
+    justify-self: center;
+    padding-top: 1vh;
+    height: 5vh;
+  }
+  .bottombar > ul > * {
+    display: none;
+  }
+  .bottombar {
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+  }
+  footer {
+    width: 100vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+  footer > * {
+    display: none;
+  }
+  footer > h1 {
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 1/6;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 662px) {
+  footer {
+    position: fixed;
+    bottom: 0;
+  }
+
+  footer > h1 {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .logo {
+    height: 15vw;
+  }
 }
